@@ -2,6 +2,8 @@
 
 	* iconv/Makefile (tests): Add tst-iconv1.
 	* iconv/tst-iconv1.c: New file.
+	* iconv/gconv_simple.c (internal_ucs4_loop): Prefer reporting
+	empty input buffer over full output buffer.
 	Reported by yaoz@nih.gov.
 
 2000-05-06  Bruno Haible  <haible@clisp.cons.org>
